# sphinx-prompt

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prospector.yaml  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  bootstrap.py  buildout.cfg  index.html  params.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  sphinx_prompt
.github/: dependabot.yaml  renovate.json5
.github/workflows/: changelog.yaml  codeql.yaml  dependabot-auto-merge.yaml  main.yaml  pr-checks.yaml  rebuild.yaml
ci/: config.yaml  requirements.txt
sphinx-prompt/: __init__.py
sphinx_prompt/: __init__.py
stylesheets/: stylesheet.css
tests/: test_sphinx_prompt.py
