[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
Sphinx = "8.2.3"
pygments = "2.19.1"
docutils = "0.21.2"
idna = "3.10"
urllib3 = "2.4.0"
certifi = "2025.4.26"
jinja2 = "3.1.6"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.17.1", extras = ["with_bandit", "with_mypy", "with_pyroma", "with_ruff"] }
prospector-profile-utils = "1.22.3"
prospector-profile-duplicated = "1.10.5"
pytest = "8.3.5"
types-docutils = "0.21.0.20241128"

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"
sphinx = "major"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[project]
dynamic = ["dependencies", "version"]
name = "sphinx-prompt"
description = "Sphinx directive to add unselectable prompt"
readme = "README.md"
keywords = ["sphinx", "shell", "prompt"]
license = "BSD-3-Clause"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Plugins',
    'Environment :: Web Environment',
    'Framework :: Sphinx :: Extension',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Documentation',
    'Topic :: Documentation :: Sphinx',
    'Topic :: Software Development :: Documentation',
    'Typing :: Typed',
]
authors = [{name = "Stéphane Brunner",email = "stephane.brunner@gmail.com"}]
packages = [
    { include = "sphinx-prompt" },
    { include = "sphinx-prompt/py.typed" },
    { include = "sphinx_prompt" },
    { include = "sphinx_prompt/py.typed" }
]
requires-python = ">=3.11"

[project.urls]
repository = "https://github.com/sbrunner/sphinx-prompt"
"Bug Tracker" = "https://github.com/sbrunner/sphinx-prompt/issues"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
